--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </section>
     <section class="product-section">
         <div class="container product">
-            <h2>Product was Built Specifically for You</h2>
+            <h2 class="product__title">Product was Built Specifically for You</h2>
             <div class="product__list">
                 <nav>
                     <ul class="product__list-nav">
