add header and first section to media

--- a/index.html
+++ b/index.html
@@ -38,6 +38,16 @@
                         <path d="M23 16C23 12.134 19.865 9 16 9V23C19.865 23 23 19.866 23 16Z" fill="currentColor" />
                     </svg>
                 </button>
+                <button class="header__btn-menu">
+                    <svg width="28" height="31" viewBox="0 0 28 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M3.5 15.5H24.5" stroke="#173A56" stroke-width="3" stroke-linecap="round"
+                            stroke-linejoin="round" />
+                        <path d="M3.5 7.75H24.5" stroke="#173A56" stroke-width="3" stroke-linecap="round"
+                            stroke-linejoin="round" />
+                        <path d="M3.5 23.25H24.5" stroke="#173A56" stroke-width="3" stroke-linecap="round"
+                            stroke-linejoin="round" />
+                    </svg>
+                </button>
             </div>
         </div>
     </header>
@@ -54,7 +64,8 @@
                 </div>
             </div>
             <div class="top__image">
-                <img src="./images/top-section-image.png" alt="top section image" width="600" height="555">
+                <img class="top__image-img" src="./images/top-section-image.png" alt="top section image" width="600" height="555">
+                <img class="media-top" src="./images/top-section-media.png" alt="top section image" width="338" height="311">
             </div>
         </div>
     </section>
